src/snapshots/alma__parser__tests__test_module_parser__signatures-2.snap
---
source: src/parser.rs
assertion_line: 3054
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit -> Fruit\n\")"
---
Input:

module Test exposing (main)

main : Fruit -> Fruit


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Idx(
                        1,
                    ),
                    end: Idx(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Idx(
                    4,
                ),
                end: Idx(
                    4,
                ),
                value: Identifier(
                    Node {
                        start: Idx(
                            4,
                        ),
                        end: Idx(
                            4,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: Idx(
                            6,
                        ),
                        end: Idx(
                            6,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: Idx(
                                        8,
                                    ),
                                    end: Idx(
                                        8,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Idx(
                                                8,
                                            ),
                                            end: Idx(
                                                8,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: Idx(
                                    10,
                                ),
                                end: Idx(
                                    10,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Idx(
                                            10,
                                        ),
                                        end: Idx(
                                            10,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [],
                                },
                            },
                        ),
                    ),
                },
            ),
        ],
        type_definitions: [],
    },
    [],
)
