src/snapshots/alma__parser__tests__test_module_parser__signatures-4.snap
---
source: src/parser.rs
assertion_line: 3066
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit a b -> Fruit a b\nmain = Fruit\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit a b -> Fruit a b
main = Fruit

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Index(
                    4,
                ),
                end: Index(
                    4,
                ),
                value: Identifier(
                    Node {
                        start: Index(
                            4,
                        ),
                        end: Index(
                            4,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Typed(
                TypeSignature {
                    name: Node {
                        start: Index(
                            6,
                        ),
                        end: Index(
                            6,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: Index(
                                        8,
                                    ),
                                    end: Index(
                                        10,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                8,
                                            ),
                                            end: Index(
                                                8,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: Index(
                                                        9,
                                                    ),
                                                    end: Index(
                                                        9,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                            Var(
                                                Node {
                                                    start: Index(
                                                        10,
                                                    ),
                                                    end: Index(
                                                        10,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 5,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: Index(
                                    12,
                                ),
                                end: Index(
                                    14,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Index(
                                            12,
                                        ),
                                        end: Index(
                                            12,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: Index(
                                                    13,
                                                ),
                                                end: Index(
                                                    13,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 4,
                                                    },
                                                },
                                            },
                                        ),
                                        Var(
                                            Node {
                                                start: Index(
                                                    14,
                                                ),
                                                end: Index(
                                                    14,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 5,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
                Pattern(
                    Node {
                        start: Index(
                            15,
                        ),
                        end: Index(
                            15,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    15,
                                ),
                                end: Index(
                                    15,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            17,
                        ),
                        end: Index(
                            17,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Identifier(
                                None,
                                CapitalizedIdentifier(
                                    Node {
                                        start: Index(
                                            17,
                                        ),
                                        end: Index(
                                            17,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                ),
                            ),
                        },
                    },
                ),
            ),
            Untyped(
                Pattern(
                    Node {
                        start: Index(
                            18,
                        ),
                        end: Index(
                            18,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    18,
                                ),
                                end: Index(
                                    18,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 6,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            20,
                        ),
                        end: Index(
                            20,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
