src/snapshots/alma__parser__tests__test_module_parser__submodule.snap
---
source: src/parser.rs
assertion_line: 2484
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\")"
---
Input:

module Parent

module Parent.Test

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Idx(
                        1,
                    ),
                    end: Idx(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: Idx(
                            3,
                        ),
                        end: Idx(
                            3,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: Idx(
                            5,
                        ),
                        end: Idx(
                            5,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 3,
                },
            },
            exports: [],
            imports: [],
            definitions: [],
            type_definitions: [],
        },
    ],
)
