src/snapshots/alma__parser__tests__test_module_parser__typed_definitions.snap
---
source: src/parser.rs
assertion_line: 3057
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit\nmain = Fruit\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit
main = Fruit

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Index(
                    4,
                ),
                end: Index(
                    4,
                ),
                value: Identifier(
                    Node {
                        start: Index(
                            4,
                        ),
                        end: Index(
                            4,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Typed(
                TypeSignature {
                    name: Node {
                        start: Index(
                            6,
                        ),
                        end: Index(
                            6,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: App(
                        Node {
                            start: Index(
                                8,
                            ),
                            end: Index(
                                8,
                            ),
                            value: Constructor_ {
                                name: Node {
                                    start: Index(
                                        8,
                                    ),
                                    end: Index(
                                        8,
                                    ),
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                                params: [],
                            },
                        },
                    ),
                },
                Pattern(
                    Node {
                        start: Index(
                            9,
                        ),
                        end: Index(
                            9,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    9,
                                ),
                                end: Index(
                                    9,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            11,
                        ),
                        end: Index(
                            11,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Identifier {
                                module: None,
                                identifier: CapitalizedIdentifier(
                                    Node {
                                        start: Index(
                                            11,
                                        ),
                                        end: Index(
                                            11,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                        },
                    },
                ),
            ),
            Untyped(
                Pattern(
                    Node {
                        start: Index(
                            12,
                        ),
                        end: Index(
                            12,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    12,
                                ),
                                end: Index(
                                    12,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 4,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            14,
                        ),
                        end: Index(
                            14,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
